force-app/main/default/objects/Quality_Control__c/Quality_Control__c.object-meta.xml
<CustomObject>
    <label>Quality Control</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>