force-app/main/default/objects/Quality_Control__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Quality Controls</relationshipLabel>
    <relationshipName>Quality_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>