force-app/main/default/objects/Quality_Control__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quality Controls</relationshipLabel>
    <relationshipName>Quality_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>