force-app/main/default/objects/Quality_Control__c/fields/FileCheckGroup_Comment__c.field-meta.xml
<CustomField>
    <fullName>FileCheckGroup_Comment__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>FileCheckGroup Comment</label>
    <type>TextArea</type>
</CustomField>