force-app/main/default/objects/Quality_Control__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Observation</label>
    <type>TextArea</type>
</CustomField>