force-app/main/default/objects/Quality_Control__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File Rating Agreed</fullName>
            </value>
            <value>
                <fullName>File Re-Rating Suggested</fullName>
            </value>
            <value>
                <fullName>File Re-Rating Agreed</fullName>
            </value>
            <value>
                <fullName>File Re-Rating not Agreed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>