force-app/main/default/objects/Quality_Control__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fx Sales Process</fullName>
            </value>
            <value>
                <fullName>Commodity Sales Process</fullName>
            </value>
            <value>
                <fullName>IRRM Sales Process</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Vanilla FX</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>IRRM</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>