force-app/main/default/objects/Quality_Control__c/validationRules/QC_Status_for_FCG_User.validationRule-meta.xml
<ValidationRule>
    <fullName>QC_Status_for_FCG_User</fullName>
    <active>true</active>
    <description>User can select Status as File Rating Agreed/File Re-Rating Suggested</description>
    <errorConditionFormula>NOT($Permission.QCStatusForFCGUser)  &amp;&amp;  (ISCHANGED(Status__c) ||  ISNEW() )  &amp;&amp; (ISPICKVAL( Status__c , &quot;File Re-Rating Agreed&quot;) || ISPICKVAL( Status__c , &quot;File Re-Rating not Agreed&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Only File Check Group can use status as  File Re-Rating Agreed/File Re-Rating not Agreed</errorMessage>
</ValidationRule>